--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -22,6 +22,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    cursor: pointer;
 }
 .about h3{
     font-weight: 600;
@@ -37,4 +38,19 @@
 .about p{
     color: #676767;
     margin-bottom: 15px;
+}
+
+/* ----- media query ----- */
+@media (max-width:898px){
+    .about{
+        flex-direction: column;
+    }
+    .about-left{
+        flex-basis: 1005;
+        margin: 20px;
+        order: 2; /*we wrote this to put picture after the paragraph */
+    }
+    .about-right{
+        flex-basis: 100%;
+    }
 }
