--- a/src/Components/Programs/Programs.css
+++ b/src/Components/Programs/Programs.css
@@ -1,54 +1,54 @@
-.programs{
-    margin: 80px auto;
-    width: 90%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.programs {
+  margin: 80px auto;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.program-details img{
-    width: 100%;
-    border-radius: 10px;
-    display: block;
+.program-details img {
+  width: 100%;
+  border-radius: 10px;
+  display: block;
 }
-.program-details{
-    flex-basis: 31%;
-    position: relative;
+.program-details {
+  flex-basis: 31%;
+  position: relative;
 }
-.caption{
-    border-radius: 10px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0,15,152,0.3);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    color: #ffff;
-    cursor: pointer;
-    opacity: 0;
-    padding-top: 70%;
-    transition: 0.4s;
+.caption {
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 15, 152, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: #ffff;
+  cursor: pointer;
+  opacity: 0;
+  padding-top: 70%;
+  transition: 0.4s;
 }
-.caption img{
-    width: 60px;
-    margin-bottom: 10px;
+.caption img {
+  width: 60px;
+  margin-bottom: 10px;
 }
-.program-details:hover .caption{
-    opacity: 1; /*We are adding that hover Effect also check line number 31 you will
+.program-details:hover .caption {
+  opacity: 1; /*We are adding that hover Effect also check line number 31 you will
                  understand more where opacity is 0 */
-    padding-top: 0;
+  padding-top: 0;
 }
 
 /* ----- media query ----- */
-@media (max-width:650px){
-    .programs{
-        flex-direction: column;
-    }
-    .program-details{
-        flex-basis: 100%;
-        margin: 20px;
-    }
+@media (max-width: 650px) {
+  .programs {
+    flex-direction: column;
+  }
+  .program-details {
+    flex-basis: 100%;
+    margin: 20px;
+  }
 }
